# codecrafters-http-server-rust

./: Cargo.toml  README.md
.codecrafters/: run.sh
src/: client_socket.rs  http_method.rs  http_server.rs  http_server_trait.rs  http_version.rs  lib.rs  main copy.rs  main.rs  map.rs  middleware.rs  mime_type.rs  request.rs  response.rs  server_socket.rs  socket.rs  status_code.rs  utils.rs
src/request/: test.rs
tests/: functional_test.rs  rfc_test.rs  rfc_test_https.rs
