[package]
name = "http_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "http_server"
path = "src/lib.rs"

[[bin]]
name = "http_server"
path = "src/main.rs"

[dependencies]
flate2 = "1.1.5"
futures = "0.3.31"
futures-rustls = "0.26.0"
macro_rules_attribute = "0.2.2"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
smol = {version = "2.0.2" }
smol-macros = "0.1.1"
